# NoDefaultLib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
NoDefaultLib/: CMakeLists.txt
NoDefaultLib/cmake/: utils.cmake
NoDefaultLib/src/: main.cpp
NoDefaultLibLibraries/MiniCRT/: CMakeLists.txt  README.txt
NoDefaultLibLibraries/MiniCRT/MiniCRT/: FileStream.h  FileSystem.h  List.h  Memory.h  Mutex.h  String.h  Thread.h  Traits.h
NoDefaultLibLibraries/MiniCRT/cmake/: utils.cmake
NoDefaultLibLibraries/MiniCRT/inc/: BasicAllocator.h  BasicAllocatorImpl.h  BasicFileStream.h  BasicFileStreamImpl.h  BasicFileSystemImpl.h  BasicList.h  BasicListAllocator.h  BasicMutex.h  BasicNew.h  BasicString.h  BasicStringAllocator.h  BasicStringFunctions.h  BasicStringFunctionsImpl.h  BasicThread.h
NoDefaultLibLibraries/MiniCRT/src/: BasicAllocatorImpl.cpp  BasicFileStreamImpl.cpp  BasicFileSystemImpl.cpp  BasicMutex.cpp  BasicNew.cpp  BasicStringFunctionsImpl.cpp  BasicThread.cpp
NoDefaultLibTests/: CMakeLists.txt
NoDefaultLibTests/cmake/: utils.cmake
NoDefaultLibTests/tests/: FileStreamTests.cpp  ListTests.cpp  MemoryTests.cpp  StringTests.cpp
